# Musuka

./: .gitignore  CMakeLists.txt  README.md  build-qt.bat  build.bat  build_mingw.bat  package.bat  package_mingw.bat  run_mingw.bat
default_image/: THIRD_PARTY_ASSETS.md
docs/: PERFORMANCE_OPTIMIZATION.md  SECURITY_AUDIT.md  TECHNICAL.md
docs/updates/: 2026-06-13-current-development-summary.md  2026-06-13-icon-preview-size-and-selection.md  2026-06-13-qt-only-build.md  2026-06-13-wallpaper-engine-and-desktop.md  2026-06-14-desktop-mode-categories.md  2026-06-14-settings-localization.md  README.md  问题.md
src/: App.cpp  App.h  ConfigStore.cpp  DesktopScanner.cpp  DesktopWindow.cpp  DesktopWindow.h  ImageUtil.cpp  ImageUtil.h  Json.cpp  Models.h  Musuka.rc  QtSettingsWindow.cpp  QtSettingsWindow.h  SettingsLocalization.cpp  SettingsLocalization.h  SettingsWindow.cpp  SettingsWindow.h  Util.cpp  Util.h  WinUtil.cpp  WinUtil.h  main.cpp
tests/: WallpaperEngineSmoke.cpp
